@@ -2,21 +2,24 @@ package fr.cotedazur.univ.polytech.startingpoint.joueurs;
 
 import fr.cotedazur.univ.polytech.startingpoint.GameState;
 import fr.cotedazur.univ.polytech.startingpoint.actions.Action;
+import fr.cotedazur.univ.polytech.startingpoint.actions.ActionJouableContext;
 import fr.cotedazur.univ.polytech.startingpoint.actions.TypeAction;
+import fr.cotedazur.univ.polytech.startingpoint.plateau.AmenagmentAttribuable;
 import fr.cotedazur.univ.polytech.startingpoint.plateau.Parcelle;
 import fr.cotedazur.univ.polytech.startingpoint.plateau.Plateau;
 import fr.cotedazur.univ.polytech.startingpoint.plateau.pioche.SelectionParcelle;
 import fr.cotedazur.univ.polytech.startingpoint.utilitaires.Position;
+import fr.cotedazur.univ.polytech.startingpoint.weather.Meteo;
+import fr.cotedazur.univ.polytech.startingpoint.objectifs.Objectif;
 
 import java.util.*;
+import java.util.logging.Logger;
 
 public abstract class Bot {
 
     private String nom;
     private InventaireJoueur inventaire;
-
-    // Ajout d'une constante pour faciliter le retour à 2 actions plus tard
-    private static final int NombreActionsParTour = 2;
+    private ActionJouableContext contexteActionJouable = new ActionJouableContext();
 
     public Bot(String nom) {
         this.nom = nom;
@@ -25,35 +28,27 @@ public abstract class Bot {
 
     protected abstract Action choisirUneAction(GameState gameState, Set<TypeAction> typesInterdits);
 
-    /**
-     * Méthode principale appelée par le moteur de jeu.
-     * Gère la boucle de prise de décision pour (NombreActionsParTour) actions.
-     */
     public List<Action> jouer(GameState gameState) {
         List<Action> actionsChoisies = new ArrayList<>();
         Set<TypeAction> typesInterdits = new HashSet<>();
 
-        // Le bot doit choisir X actions
-        for (int i = 0; i < NombreActionsParTour; i++) {
+        for (int i = 0; i < contexteActionJouable.getTokenCount(); i++) { // nombre d'action par tour :
+                                                                          // contexteActionJouable.getTokenCount()
             Action action = choisirUneAction(gameState, typesInterdits);
-
-            // Sécurité : si le bot ne sait pas quoi faire (null), on arrête son tour
-            if (action == null) break;
-
+            if (action == null)
+                break;
             actionsChoisies.add(action);
-            typesInterdits.add(action.getType()); // On ne peut pas refaire la même action
+            typesInterdits.add(action.getType());
         }
-
         return actionsChoisies;
     }
 
     public void verifierObjectifs(GameState gameState) {
-        // Copie défensive pour éviter ConcurrentModificationException si on retire un objectif en itérant
-        List<fr.cotedazur.univ.polytech.startingpoint.objectifs.Objectif> objectifsACheck = new ArrayList<>(inventaire.getObjectifs());
-
-        for (fr.cotedazur.univ.polytech.startingpoint.objectifs.Objectif obj : objectifsACheck) {
+        List<fr.cotedazur.univ.polytech.startingpoint.objectifs.Objectif> copy = new ArrayList<>(
+                inventaire.getObjectifs());
+        for (var obj : copy) {
             if (obj.valider(gameState, this)) {
-                fr.cotedazur.univ.polytech.startingpoint.utilitaires.Logger.print(getNom() + " a validé l'objectif : " + obj.toString());
+                Logger.info(getNom() + " a validé l'objectif : " + obj.toString());
                 inventaire.ajouterPoints(obj.getPoints());
                 inventaire.incrementerObjectifsValides();
                 inventaire.retirerObjectif(obj);
@@ -61,19 +56,41 @@ public abstract class Bot {
         }
     }
 
-    // La selection de base d'une parcelle : on ne regarde pas les trois parcelles piochées, on ne prend que la première piochée.
+    // --- MÉTHODES AJOUTÉES POUR COMPATIBILITÉ BOTS AVANCÉS ---
+
+    /**
+     * Requis par l'action PoserParcelle.
+     */
     public Parcelle choisirParcelle(SelectionParcelle session, Plateau plateau) {
-        Parcelle parcelleChoisie = session.getFirst();
-        session.validerChoix(parcelleChoisie);
-        return parcelleChoisie;
+        if (session.getParcellesAChoisir().isEmpty())
+            return null;
+        Parcelle p = session.getFirst();
+        session.validerChoix(p);
+        return p;
     }
 
+    /**
+     * Requis par l'action PoserParcelle.
+     */
     public Position choisirPosition(Parcelle parcelleChoisie, Plateau plateau) {
-        List<Position> positionsDisponibles = plateau.getEmplacementsDisponibles();
-        if (!positionsDisponibles.isEmpty()) {
-            return positionsDisponibles.getFirst();
-        }
-        return null;
+        List<Position> dispos = plateau.getEmplacementsDisponibles();
+        return dispos.isEmpty() ? null : dispos.get(0);
+    }
+
+    /**
+     * Requis par BotEquipe pour synchroniser l'inventaire avec les sous-bots.
+     */
+    public void setInventaire(InventaireJoueur inventairePartage) {
+        this.inventaire = inventairePartage;
+    }
+
+    // --- GETTERS ---
+    public String getNom() {
+        return nom;
+    }
+
+    public InventaireJoueur getInventaire() {
+        return inventaire;
     }
 
     public int getNombreObjectifsValides() {
@@ -84,31 +101,21 @@ public abstract class Bot {
         return inventaire.getScore();
     }
 
-    // --- GETTERS & SETTERS CLASSIQUES ---
-
-    public String getNom() {
-        return nom;
+    public ActionJouableContext getActionJouableContext() {
+        return contexteActionJouable;
     }
 
-    public InventaireJoueur getInventaire() {
-        return inventaire;
-    }
+    /// ===== METEO =====
 
-    // AJOUT NECESSAIRE POUR LE BOT STRATÉGIQUE
-    // Permet de synchroniser l'inventaire entre le Chef et ses Sous-Bots
-    protected void setInventaire(InventaireJoueur inventairePartage) {
-        this.inventaire = inventairePartage;
-    }
+    public abstract Parcelle choisirParcelleMeteo(List<Parcelle> parcellesIrriguees);
 
-    @Override
-    public boolean equals(Object o) {
-        if (this == o) return true;
-        if (!(o instanceof Bot bot)) return false;
-        return Objects.equals(nom, bot.nom);
-    }
+    public abstract Parcelle choisirDestinationPanda(List<Parcelle> parcelles);
 
-    @Override
-    public int hashCode() {
-        return Objects.hash(nom);
+    public abstract Meteo choisirMeteo();
+
+    public abstract Meteo choisirMeteoAlternative();
+
+    public void recevoirAmenagement(AmenagmentAttribuable amenagement) {
+        inventaire.ajouterAmenagement(amenagement);
     }
 }
